public static class Constants
{
    //Anim
    public const string AttackAnim = "attack";
    public const string IsAttackAnim = "IsAttack";
    public const string IdleAnim = "idle";
    public const string IsIdleAnim = "IsIdle";
    public const string DeathAnim = "die";
    public const string IsDeathAnim = "IsDead";
    public const string RunAnim = "run";
    public const string IsRunAnim = "IsRun";
    public const string JumpAnim = "jump";
    public const string FallAnim = "fall";
    public const string RespawnAnim = "respawn";
    public const string ThrowAnim = "throw";
    public const string IsDanceAnim = "IsDance";
    public const string DanceAnim = "dance";
    public const string Dance2Anim = "dance2";
    public const string Dance3Anim = "dance3";
    public const string Dance4Anim = "dance4";
    public const string WinAnim = "win";
    public const string IsWinAnim = "IsWin";
    public const string FailAnim = "fail";
    public const string IsUtilAnim = "IsUtil";

    //Tag
    public const string BrickTag = "Brick";
    public const string PlayerTag = "Player";
    public const string EnemyTag = "Enemy";
    public const string ParamTag = "Param";

    //PlayerPrefs
    public const string CoinPlayerPrefs = "coin";

    //Scene
    public const string GameplayScene = "Scenes/GamePlay";

}